<resources>
    <string name="app_name">FM Council</string>
    <string name="alert_dialog_ok">OK</string>
    <string name="alert_dialog_cancel">Cancel</string>
    <string name="alert_dialog_setting">Settings</string>
    <string name="no_internet_msg">This feature requires internet connection. Please check your internet settings and try again.</string>
    <string name="no_internet_msg_main">This Application required internet connection. Please check your internet setting and try again.</string>
    <string name="no_internet_title">No internet</string>
    <string name="no_posts_found">No Posts Found</string>
    <string name="please_wait">Please Wait</string>

    <string name="signup"><u>Sign Up</u></string>
    <string name="new_user">New user?</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="password">Password</string>
    <string name="get_password">Get Password</string>
    <string name="username">UserName</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>

    <string name="confirm_password">Confirm Password</string>

    <string name="txt_sign_up">Sign Up</string>
    <string name="interested_location">please select interested location</string>
    <string name="interested_location_small">Interested location</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="current_location">Current Location</string>
    <string name="alternate_contact_number">Alternate Contact Number</string>
    <string name="contact_number">Contact Number</string>
    <string name="business_mail">Business e-Mail Id</string>
    <string name="personal_mail">Personal e-Mail Id</string>
    <string name="first_name">First Name</string>
    <string name="member_name">Member Name</string>
    <string name="last_name">Last Name</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>

    <string name="hyderabad">Hyderabad</string>
    <string name="chennai">Chennai</string>
    <string name="bangalore">Bangalore</string>
    <string name="pune">Pune</string>

    <string name="home">Home</string>
    <string name="events">Events</string>
    <string name="history">History</string>
    <string name="welcome_message">Welcome Message</string>
    <string name="member_directory">Member Directory</string>
    <string name="vendor_partners">Business Enablers</string>
    <string name="awards">Awards</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="csr">CSR</string>
    <string name="gallery">Gallery</string>
    <string name="editorials">Editorials</string>
    <string name="contacts_us">Contact Us</string>
    <string name="logout">Logout</string>
    <string name="comment">Comment</string>
    <string name="like">Like</string>
    <string name="likes_this">likes this</string>
    <string name="reply">Reply</string>
    <string name="change_password">Change Password</string>

    <string name="post_your_topic">Post Your Topic</string>
    <string name="your_name">Your Name</string>
    <string name="what_is_in_your_mind">What is in your mind?</string>
    <string name="Share_an_article_photo_or_idea">Share an article, photo or idea</string>
    <string name="post">Post</string>
    <string name="company_name">Company Name</string>
    <string name="place_time_date">Place Time Date</string>

    <string name="meeting_on_ghmc_elections">Meeting on GHMC elections</string>
    <string name="location">Hyderabad</string>
    <string name="tv_balance_days">3 Days To\nGo</string>
    <string name="accept">Accept</string>
    <string name="decline">Decline</string>
    <string name="venue">Venue</string>
    <string name="organized_by">Organized By</string>
    <string name="contact">Contact</string>
    <string name="chief_guest">chief Guest</string>
    <string name="date_of_event">Date Of Event</string>
    <string name="details">Details</string>
    <string name="this_meeting_for_launching_the_app">this meeting for launching the app</string>

    <string name="search">Search</string>
    <string name="category">Category</string>
    <string name="folder_name">Folder Name</string>

    <string name="address">Address</string>
    <string name="fmc_mail_id">fmc@fmc.in</string>
    <string name="site">www.fmc.com</string>
    <string name="follow_us">Follow Us</string>
    <string name="share_app"><u>Share App</u></string>
    <string name="share">Share</string>
    <string name="gallery_view">Gallery View</string>

    <string name="date_time">25th Sep, 2016       10.30AM</string>

    <string name="txt_choose_photo">Choose Photo</string>
    <string name="txt_take_photo">Take Photo</string>
    <string name="txt_crop">Crop</string>
    <string name="txt_cancel">Cancel</string>

    <string name="txt_cd">empty</string>
    <string name="icon_left_arrow">&#xf060;</string>
    <string name="fa_paper_plane">&#xf1d8;</string>
    <string name="share_icon">&#xE895;</string>
    <string name="comment_icon">&#xE0CB;</string>
    <string name="delete_icon">&#xE92B;</string>
    <string name="edit_icon">&#xf040;</string>
    <string name="txt_accept">Accept</string>
    <string name="no_posts_in_home">No Posts In Home</string>
    <string name="no_more_data_to_display">No more data to display</string>

    <string name="choose_doc_file">Choose Doc File</string>
    <string name="no_doc_found">No Doc Found</string>
    <string name="are_you_sure_you_want_to_attend_the_event">Are you sure you want to attend the event</string>
    <string name="are_you_sure_you_want_to_decline_the_event">Are you sure you want to decline the event</string>
    <string name="are_you_sure_do_you_want_to_exit">Are you sure do you want to exit?</string>
    <string name="are_you_sure_do_you_want_to_logout">Are you sure do you want to logout?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

    <string name="sign_up_completed_successfully">Sign up completed successfully</string>
    <string name="txt_contact_us">Contact us</string>
    <string name="phone_number">040 64557484</string>
    <string name="contact_address"> 202, 2nd floor, Shashirekha apartment, thirumalghery, thirumalghery X roads, Secundrabad, TS 500015</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="save">Save</string>
    <string name="you_have_already_liked_this_post">You have already liked this post</string>
    <string name="camera_icon">&#xf030;</string>
    <string name="author_name">Author Name</string>

</resources>
