<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="@dimen/_50dp"
            android:layout_height="@dimen/_50dp"
            android:layout_marginLeft="@dimen/_5dp"
            android:layout_marginTop="@dimen/_5dp"
            android:src="@drawable/avatar_image" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/txt_comment_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_5dp"
                    android:layout_marginLeft="@dimen/_15dp"
                    android:layout_marginRight="@dimen/_5dp"
                    android:layout_marginStart="@dimen/_15dp"
                    android:layout_marginTop="@dimen/_5dp"
                    android:text="@string/your_name"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/_20sp" />

                <TextView
                    android:id="@+id/txt_comment_company"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_5dp"
                    android:text="@string/company_name"
                    android:textColor="@color/light_orange"
                    android:textSize="@dimen/_12sp" />
            </LinearLayout>

            <TextView
                android:id="@+id/txt_comment_time_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_10dp"
                android:text="@string/place_time_date"
                android:textSize="@dimen/_12sp" />

            <TextView
                android:id="@+id/txt_comment_post_message"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_10dp"
                android:layout_marginTop="@dimen/_5dp"
                android:text="@string/no_internet_msg"
                android:textSize="@dimen/_12sp" />

            <TextView
                android:id="@+id/txt_reply"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_10dp"
                android:layout_marginTop="@dimen/_5dp"
                android:text="@string/reply"
                android:visibility="gone"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/_18sp" />
        </LinearLayout>
    </LinearLayout>


</LinearLayout>
