<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/post_image"
            android:layout_width="@dimen/_70dp"
            android:layout_height="@dimen/_70dp"
            android:layout_marginLeft="@dimen/_5dp"
            android:layout_marginTop="@dimen/_5dp"
            android:src="@drawable/avatar_image" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/txt_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_5dp"
                    android:layout_marginLeft="@dimen/_15dp"
                    android:layout_marginRight="@dimen/_5dp"
                    android:layout_marginStart="@dimen/_15dp"
                    android:layout_marginTop="@dimen/_5dp"
                    android:text="@string/your_name"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/_25sp" />

                <TextView
                    android:id="@+id/txt_company"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_5dp"
                    android:text="@string/company_name"
                    android:textColor="@color/light_orange"
                    android:textSize="@dimen/_12sp" />
            </LinearLayout>

            <TextView
                android:id="@+id/txt_time_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_10dp"
                android:text="@string/place_time_date" />
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/txt_post_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/_5dp"
        android:layout_marginTop="@dimen/_3dp" />

    <ImageView
        android:id="@+id/image_data"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_150dp"
        android:layout_marginBottom="@dimen/_5dp"
        android:layout_marginTop="@dimen/_5dp"
        android:scaleType="fitXY"
        android:src="@drawable/star_banner" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_5dp"
        android:background="@drawable/drawable_login_layout"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/edt_comment"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40dp"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:hint="@string/comment"
            android:inputType="text|textNoSuggestions"
            android:maxLines="2"
            android:paddingLeft="@dimen/_5dp"
            android:textSize="@dimen/_18sp" />

        <!--<ImageView
            android:layout_width="@dimen/_28dp"
            android:layout_height="@dimen/_23dp"
            android:layout_gravity="right|center_vertical"
            android:layout_margin="@dimen/_5dp"
            android:layout_marginBottom="@dimen/_5dp"
            android:layout_marginTop="@dimen/_5dp"
            android:scaleType="fitXY"
            android:src="@drawable/camera" />-->
        <TextView
            android:id="@+id/txt_send"
            android:layout_width="@dimen/_30dp"
            android:layout_height="@dimen/_25dp"
            android:textColor="@color/colorPrimary"
            android:text="@string/fa_paper_plane" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_comments"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" />

</LinearLayout>
