<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <ImageView
        android:layout_width="@dimen/_70dp"
        android:layout_height="@dimen/_70dp"
        android:layout_marginLeft="@dimen/_5dp"
        android:layout_marginTop="@dimen/_5dp"
        android:src="@drawable/avatar_image" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/_5dp"
        android:layout_marginStart="@dimen/_5dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txt_your_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5dp"
            android:text="@string/first_name"
            android:textColor="@color/blackColor"
            android:textSize="@dimen/_18sp" />

        <TextView
            android:id="@+id/txt_company"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5dp"
            android:text="@string/company_name"
            android:textColor="@color/gray"
            android:textSize="@dimen/_14sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_10dp"
            android:layout_marginStart="@dimen/_10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txt_time_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginTop="@dimen/_5dp"
                android:layout_weight="1"
                android:text="@string/date_time"
                android:textColor="@color/gray"
                android:textSize="@dimen/_12sp" />

            <ImageView
                android:layout_width="@dimen/_50dp"
                android:layout_height="@dimen/_50dp"
                android:layout_gravity="right"
                android:layout_marginLeft="@dimen/_5dp"
                android:layout_marginTop="@dimen/_5dp"
                android:src="@drawable/edit_pdf_icon" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>
