<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/rly_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <LinearLayout
        android:id="@+id/ll_sub"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerInParent="true">
        <ImageView
            android:id="@+id/iv_login_logo"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_170dp"
            android:layout_marginBottom="@dimen/_25dp"
            android:src="@drawable/login_label"/>
        <LinearLayout
            android:id="@+id/ll_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@drawable/drawable_login_layout">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/_10dp"
                android:layout_marginRight="@dimen/_10dp"
                android:orientation="vertical"
                >
            <LinearLayout
                android:id="@+id/ll_user_name"
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:layout_marginBottom="2dp"
                android:layout_marginTop="@dimen/_20dp"
                android:layout_height="wrap_content">
                <ImageView
                    android:id="@+id/iv_user_name"
                    android:layout_width="@dimen/_30dp"
                    android:layout_height="@dimen/_30dp"
                    android:layout_gravity="center"
                    android:src="@drawable/login_icon"/>
                <EditText
                    android:id="@+id/et_user_name"
                    android:layout_width="match_parent"
                    android:background="@android:color/transparent"
                    android:layout_marginLeft="@dimen/_5dp"
                    android:layout_gravity="bottom"
                    android:maxLines="1"
                    android:textSize="@dimen/_18sp"
                    android:layout_height="wrap_content"
                    android:hint="@string/username"
                    />
            </LinearLayout>
            <ImageView
                android:id="@+id/iv_user_line"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_5dp"
                android:src="@drawable/et_line"/>
            <LinearLayout
                android:id="@+id/ll_password"
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:layout_marginBottom="2dp"
                android:layout_marginTop="@dimen/_20dp"
                android:layout_height="wrap_content">
                <ImageView
                    android:id="@+id/iv_password"
                    android:layout_width="@dimen/_30dp"
                    android:layout_height="@dimen/_30dp"
                    android:layout_gravity="center"
                    android:src="@drawable/password_icon"/>
                <EditText
                    android:id="@+id/et_password"
                    android:layout_width="match_parent"
                    android:background="@android:color/transparent"
                    android:layout_marginLeft="@dimen/_5dp"
                    android:layout_gravity="bottom"
                    android:textSize="@dimen/_18sp"
                    android:maxLines="1"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    />
            </LinearLayout>
            <ImageView
                android:id="@+id/iv_pwd_line"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_5dp"
                android:src="@drawable/et_line"/>
            <TextView
                android:id="@+id/tv_forgot_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/forgot_password"
                android:textSize="@dimen/_18sp"
                android:padding="@dimen/_5dp"
                android:textColor="@color/colorAccent"
                android:layout_gravity="right"/>
            <TextView
                android:id="@+id/tv_login"
                android:layout_width="@dimen/_130dp"
                android:layout_height="@dimen/_40dp"
                android:layout_gravity="center"
                android:gravity="center"
                android:textColor="@color/white"
                android:text="@string/login"
                android:textSize="@dimen/_18sp"
                android:layout_marginTop="@dimen/_30dp"
                android:layout_marginBottom="@dimen/_10dp"
                android:background="@drawable/drawable_button"/>
                </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/ll_sign_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_30dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/new_user"
                android:textSize="@dimen/_14sp"
                android:textColor="@color/colorAccent"
                android:layout_gravity="center"/>
            <TextView
                android:id="@+id/tv_sign_up"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/signup"
                android:textSize="@dimen/_18sp"
                android:textColor="@color/colorAccent"
                android:layout_gravity="center"/>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>
