<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.versatilemobitech.fmc.fragments.ContactsUsFragment">

    <!-- TODO: Update blank fragment layout -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/contacts_us"
            android:textColor="@color/themeColor"
            android:textSize="@dimen/_25sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/_5dp">

            <ImageView
                android:layout_width="@dimen/_30dp"
                android:layout_height="@dimen/_30dp"
                android:layout_gravity="left"
                android:src="@drawable/contact_us_location" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:gravity="center|left"
                android:textColor="@color/themeColor"
                android:textSize="@dimen/_18sp"
                android:text="@string/address"
                android:layout_marginLeft="@dimen/_20dp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/_5dp">

            <ImageView
                android:layout_width="@dimen/_30dp"
                android:layout_height="@dimen/_30dp"
                android:layout_gravity="left"
                android:src="@drawable/mobile_icon" />

            <TextView
                android:layout_width="match_parent"
                android:textSize="@dimen/_18sp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:gravity="center|left"
                android:textColor="@color/themeColor"
                android:text="999 999 9999"
                android:layout_marginLeft="@dimen/_20dp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/_5dp">
            <ImageView
                android:layout_width="@dimen/_30dp"
                android:layout_height="@dimen/_30dp"
                android:layout_gravity="left"
                android:src="@drawable/contact_us_mail" />
            <TextView
                android:textSize="@dimen/_18sp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:gravity="center|left"
                android:textColor="@color/themeColor"
                android:text="@string/fmc_mail_id"
                android:layout_marginLeft="@dimen/_20dp"
                android:id="@+id/textView" />



        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/_5dp">

            <ImageView
                android:layout_width="@dimen/_30dp"
                android:layout_height="@dimen/_30dp"
                android:layout_gravity="left"
                android:src="@drawable/contact_us_web" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:gravity="center|left"
                android:textColor="@color/themeColor"
                android:textSize="@dimen/_18sp"
                android:text="@string/site"
                android:layout_marginLeft="@dimen/_20dp"/>
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/follow_us"
            android:layout_marginTop="@dimen/_10dp"
            android:textColor="@color/themeColor"
            android:textSize="@dimen/_25sp" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40dp"

            android:orientation="horizontal"
            android:layout_marginTop="@dimen/_20dp"
            android:weightSum="4">
            <ImageView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:src="@drawable/contact_us_fb"/>
            <ImageView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:src="@drawable/contact_us_g_plus"/>
            <ImageView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:src="@drawable/contact_us_twittwe"/>
            <ImageView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:src="@drawable/contact_us_in"/>
        </LinearLayout>

    </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="@dimen/_30dp"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="@dimen/_30dp"
                android:layout_height="@dimen/_30dp"
                android:src="@drawable/share"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/_20sp"
                android:gravity="center"
                android:layout_gravity="center"
                android:textColor="@color/themeColor"
                android:text="@string/share_app"/>
        </LinearLayout>
    </RelativeLayout>

</LinearLayout>
